# fun_shade

./: Cargo.toml  LICENSE  README.md
assets/: geo_frag.wgsl  geo_vert.wgsl  my_frag.wgsl  my_vert.wgsl  plane.blend  plane.gltf
assets/shaders/: geo_frag.wgsl  geo_vert.wgsl  moving_frag.wgsl  moving_vert.wgsl  my_frag.wgsl  tex.frag  tex.vert  tex_vert.wgsl
src/: camera.rs  cylinder.rs  main.rs  plane.rs
src/materials/: mod.rs
