[package]
name = "fun_shade"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
#bevy = { path = "../bevy" }
bevy-inspector-egui = "0.17.0"
bevy_mod_picking = "0.11.0"
#bevy_transform_gizmo = { path = "../../../extern/my_bevy_transform_gizmo", version = "0.5.0" }
bevy_transform_gizmo = { git = "https://github.com/woodroww/my_bevy_transform_gizmo" }

