[package]
name = "fun_shade"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
#bevy = { path = "../bevy" }
bevy-inspector-egui = "0.17.0"
bevy_mod_picking = "0.11.0"
bevy_transform_gizmo = { path = "../my_bevy_transform_gizmo" }
#bevy_transform_gizmo = { git = "https://github.com/woodroww/my_bevy_transform_gizmo" }


# bevy = { version = "0.10.0" }
# #bevy = { path = "../bevy" }
# bevy-inspector-egui = "0.17.0"
# bevy_transform_gizmo = { path = "../my_bevy_transform_gizmo" }
# #bevy_transform_gizmo = { git = "https://github.com/woodroww/my_bevy_transform_gizmo" }
# 
# #bevy_mod_picking = "0.11.0"
# 
# # update forks
# bevy_mod_picking = { git = "https://github.com/Fincap/bevy_mod_picking.git", branch = "migrate-bevy-0.10.0" }
# #bevy_mod_raycast = { git = "https://github.com/soerenmeier/bevy_mod_raycast.git", branch = "bevy-0.10" }
